<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/information"
                    android:src="@drawable/aboutr" />

                <TextView
                    android:id="@+id/cftitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/cftitle"
                    android:textColor="#6688cc"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/abouttxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="left"
                    android:lineSpacingExtra="4dp"
                    android:padding="0dp"
                    android:text="@string/abouttxt"
                    android:textColor="#ffffff"
                    android:textColorHint="#000000"
                    android:textSize="15sp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>