<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/abouttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="left"
                android:lineSpacingExtra="4dp"
                android:maxLines="50"
                android:padding="0dp"
                android:scrollbars="vertical"
                android:text="@string/nxtpage"
                android:textColor="#ffffff"
                android:textColorHint="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/p2txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:lineSpacingExtra="4dp"
                android:padding="0dp"
                android:text="@string/page2"
                android:textColor="#ffffff"
                android:textColorHint="#000000"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/icon" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>