<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/syllabus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/topic"
        android:textColor="#33CC00"
        android:textSize="45sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/subject"
        android:textColor="#45B4FF"
        android:textSize="35sp" />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageButton
        android:id="@+id/lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject"
        android:layout_marginRight="58dp"
        android:layout_marginTop="27dp"
        android:layout_toLeftOf="@+id/quiz"
        android:background="#ffffff"
        android:contentDescription="@string/schoice"
        android:src="@drawable/lessionr" />

    <ImageButton
        android:id="@+id/quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lesson"
        android:layout_marginRight="54dp"
        android:background="#ffffff"
        android:contentDescription="@string/schoice"
        android:src="@drawable/quizr" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="42dp"
            android:layout_toRightOf="@+id/help"
            android:background="#ffffff"
            android:contentDescription="@string/schoice"
            android:src="@drawable/aboutr" />

        <ImageButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:background="#ffffff"
            android:contentDescription="@string/schoice"
            android:src="@drawable/helpr" />

    </RelativeLayout>

</LinearLayout>